# cci-tag-scanner

./: .gitignore  README.md  facet_mappings.json  pyproject.toml  requirements.txt  requirements_fix.txt  setup.py  testjson.txt
.github/workflows/: tests.yml
cci_tag_scanner/: facets.py  tagger.py
cci_tag_scanner/conf/: settings.py
cci_tag_scanner/dataset/: dataset.py
cci_tag_scanner/elasticsearch/: __init__.py  multihost.py
cci_tag_scanner/scripts/: check_tags.py
cci_tag_scanner/tests/: facet_mappings.json
cci_tag_scanner/utils/: dataset_jsons.py  elasticsearch.py
cci_tagger/: tagger.py
cci_tagger/dataset/: dataset.py
cci_tagger/tests/: triple_store.py
docs/: triple_store_removal.md
tag_scanner/: facets.py  tagger.py  triple_store.py
tag_scanner/conf/: constants.py
tag_scanner/dataset/: __init__.py  dataset.py
tag_scanner/file_handlers/: handler_factory.py  netcdf.py
tag_scanner/scripts/: check_json.py  check_tags.py  command_line_client.py  dump_facet_object.py
tag_scanner/tests/: test_consistency.py  test_dataset_object.py  test_dataset_tree.py  test_json.py  triple_store.py  ~test_dataset_object.py
tag_scanner/utils/: dataset_jsons.py
