[project]
name = "tag-scanner"
version = "2.2.2"
description = "This package provides a command line tool moles_esgf_tag to generate dataset tags for both MOLES and ESGF."
license = "BSD 3"
readme = "README.md"
authors = [
    { name = "Daniel Westwood", email = "daniel.westwood@stfc.ac.uk"},
    { name = "Antony Wilson", email = "antony.wilson@stfc.ac.uk"}
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
]
include = [
    { path = "templates/*.html" },
    { path = "conf/tag_check.conf" },
    { path = "tag_scanner/tests/*"}
]
dependencies = [
    "verboselogs>=1.7",
    "elasticsearch (>=7.6.0,<7.7)",
    "tqdm (>=4.45.0,<5)",
    "pytest (>=8.3.3,<9.0.0)",
    "jinja2 (>=3,<4)",
    "numpy (>=1.25,<2.0)",
    "netcdf4 (>=1.7.2,<2.0.0)",
    "six (>=1.16.0,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
#    "directory-tree @ https://github.com/cedadev/ceda-directory-tree.git"
]

requires-python = ">=3.9,<4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
moles_esgf_tag = "tag_scanner.scripts:CCITaggerCommandLineClient.main"
cci_json_check = "tag_scanner.scripts:TestJSONFile.cmd"
cci_check_tags = "tag_scanner.scripts.check_tags:main"
export_facet_json = "tag_scanner.scripts.dump_facet_object:main"